--- a/web/themes/hsk_zymphonies/sass/_node.sass
+++ b/web/themes/hsk_zymphonies/sass/_node.sass
@@ -393,6 +393,27 @@ div#sliding-popup
     +x-rem(font-size, 0.75)
     color: #777
 
+.page-node-type-event
+  .field--name-field-ev-date
+    font-weight: 700
+    margin-bottom: 1em
+    font-size: 1.2rem
+    color: #444
+    time
+      background: #eee
+      padding: 0.5em 0.8em
+      padding-left: 2.3em
+      +slab-font
+    &:before
+      position: absolute
+      font-family: Fontawesome-Regular
+      content: "\f133"
+      top: -0.2em
+      left: 0.4em
+      font-size: 1.5rem
+
+
+
 
 
 
