Korrektur falsch sitzendes Kalender-Icon in Firefox

--- a/web/themes/hsk_zymphonies/sass/_node.sass
+++ b/web/themes/hsk_zymphonies/sass/_node.sass
@@ -399,6 +399,7 @@ div#sliding-popup
     margin-bottom: 1em
     font-size: 1.2rem
     color: #444
+    position: relative
     time
       background: #eee
       padding: 0.5em 0.8em
