--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2884,6 +2884,7 @@ div#sliding-popup .eu-cookie-compliance-banner #popup-buttons button:hover {
   margin-bottom: 1em;
   font-size: 1.2rem;
   color: #444;
+  position: relative;
 }
 .page-node-type-event .field--name-field-ev-date time {
   background: #eee;
