Neue Preprocess Funktion für Header Slideshow Image, um die CSS-Klasse, die per Feld eingegeben werden kann, mal anzuzeigen.

--- a/web/themes/hsk_zymphonies/templates/paragraphs/paragraph--slideshow_image--slideshow.html.twig
+++ b/web/themes/hsk_zymphonies/templates/paragraphs/paragraph--slideshow_image--slideshow.html.twig
@@ -1,4 +1,5 @@
 {% set classes = [
+  francis,
   'paragraph',
   'paragraph--type--' ~ paragraph.bundle|clean_class,
   view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
