--- a/web/themes/hsk_zymphonies/css/ckeditor-custom.css
+++ b/web/themes/hsk_zymphonies/css/ckeditor-custom.css
@@ -1,10 +1,12 @@
 table.center-table {
-  margin: 1em auto; }
+  margin: 1em auto;
+}
 
 /************************************ */
 /** Styles for the CKEditor Interface */
 /************************************ */
 .cke_reset .cke_editable table.center-table {
-  margin: 1em auto; }
+  margin: 1em auto;
+}
 
 /*# sourceMappingURL=ckeditor-custom.css.map */
