--- a/web/themes/hsk_zymphonies/sass/_landing-page.sass
+++ b/web/themes/hsk_zymphonies/sass/_landing-page.sass
@@ -1,3 +1,29 @@
+.page-node-type-layout-page
+  &.node-bundesliga
+    .block-block-content
+      &.sponsoren-logos
+        background: #eee
+        padding: 0.5em 1em
+        margin-bottom: 3em
+        .field__item
+          margin-bottom: 1.5em
+        .image
+          img
+            max-width: 200px
+            max-height: 70px
+            width: auto
+    .top-news
+      &.block-views-blockbundesliga-news-block-1
+        .view-content
+          .views-row
+            margin-bottom: 2em
+            .views-field-field-image
+              margin-bottom: 0.5em
+            .views-field-title
+              h2
+                font-size: 1.35rem
+
+
 /*------------------------------------------- */
 /*------------------------------------------- */
 /*------------- Desktop narrow  --------------*/
@@ -31,3 +57,4 @@
             +make-row()
             .views-row
               +make-md-column(4)
+              padding-right: 2em
