--- a/web/themes/hsk_zymphonies/sass/_landing-page.sass
+++ b/web/themes/hsk_zymphonies/sass/_landing-page.sass
@@ -1,10 +1,16 @@
 .page-node-type-layout-page
+  #block-tabs
+    +hsk-container
+  form.node-layout-page-layout-builder-form, .messages
+    +hsk-container
   &.node-bundesliga
+    .hsk-onecol
+      &.sponsoren-logos-container
+        background: #eee
+        margin-bottom: 3em
     .block-block-content
       &.sponsoren-logos
-        background: #eee
-        padding: 0.5em 1em
-        margin-bottom: 3em
+        padding: 0.5em 0
         .field__item
           margin-bottom: 1.5em
         .image
