--- a/web/themes/hsk_zymphonies/sass/includes/_mixins.scss
+++ b/web/themes/hsk_zymphonies/sass/includes/_mixins.scss
@@ -39,3 +39,17 @@
   -ms-hyphens: auto;
   hyphens: auto;
 }
+
+@mixin hsk-container {
+  @include container-fixed;
+
+  @media (min-width: $screen-sm-min) {
+    width: $container-sm;
+  }
+  @media (min-width: $screen-md-min) {
+    width: $container-md;
+  }
+  @media (min-width: $screen-lg-min) {
+    width: $container-lg;
+  }
+}
