--- a/web/themes/hsk_zymphonies/templates/paragraphs/paragraph--bild_verlinkt.html.twig
+++ b/web/themes/hsk_zymphonies/templates/paragraphs/paragraph--bild_verlinkt.html.twig
@@ -3,7 +3,8 @@
   'paragraph',
   'paragraph--type--' ~ paragraph.bundle|clean_class,
   view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
-  not paragraph.isPublished() ? 'paragraph--unpublished'
+  not paragraph.isPublished() ? 'paragraph--unpublished',
+  paragraph.field_css_class.value
 ]
 %}
 {% block paragraph %}
