--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -4263,6 +4263,9 @@ nav#block-hsk-footer ul li a {
   }
 }
 /* End Media Query Tablet */
+.page-node-type-layout-page .sidebar {
+  margin-top: 0;
+}
 .page-node-type-layout-page #block-tabs {
   padding-right: 15px;
   padding-left: 15px;
@@ -4319,12 +4322,24 @@ nav#block-hsk-footer ul li a {
     width: 1170px;
   }
 }
+.page-node-type-layout-page.node-bundesliga .content_layout .region-content {
+  margin-bottom: 0;
+}
+.page-node-type-layout-page.node-bundesliga .content_layout .region-content #block-hsk-zymphonies-content {
+  margin-bottom: 0;
+}
 .page-node-type-layout-page.node-bundesliga .hsk-onecol.sponsoren-logos-container {
   background: #eee;
   margin-bottom: 3em;
 }
+.page-node-type-layout-page.node-bundesliga .hsk-onecol.further-news {
+  background: #eee;
+  padding-top: 4em;
+  padding-bottom: 3em;
+}
 .page-node-type-layout-page.node-bundesliga .block-block-content.sponsoren-logos {
-  padding: 0.5em 0;
+  padding: 2em 0;
+  margin-bottom: 0;
 }
 .page-node-type-layout-page.node-bundesliga .block-block-content.sponsoren-logos .field__item {
   margin-bottom: 1.5em;
@@ -4334,6 +4349,10 @@ nav#block-hsk-footer ul li a {
   max-height: 70px;
   width: auto;
 }
+.page-node-type-layout-page.node-bundesliga .top-news.block-views-blockbundesliga-news-block-1 > h2 {
+  font-size: 2rem;
+  margin-bottom: 1em;
+}
 .page-node-type-layout-page.node-bundesliga .top-news.block-views-blockbundesliga-news-block-1 .view-content .views-row {
   margin-bottom: 2em;
 }
@@ -4342,6 +4361,35 @@ nav#block-hsk-footer ul li a {
 }
 .page-node-type-layout-page.node-bundesliga .top-news.block-views-blockbundesliga-news-block-1 .view-content .views-row .views-field-title h2 {
   font-size: 1.35rem;
+}
+.page-node-type-layout-page.node-bundesliga .top-news.block-views-blockbundesliga-news-block-1 .views-field-bundesliga-tags ul {
+  margin: 0;
+  padding: 0;
+}
+.page-node-type-layout-page.node-bundesliga .top-news.block-views-blockbundesliga-news-block-1 .views-field-bundesliga-tags ul li {
+  display: inline-block;
+  background: #eee;
+  color: #999;
+  height: 26px;
+  line-height: 18px;
+  padding: 0.2em 0.7em 0.2em 2em;
+  position: relative;
+  margin-left: 0;
+  margin-right: 1em;
+}
+.page-node-type-layout-page.node-bundesliga .top-news.block-views-blockbundesliga-news-block-1 .views-field-bundesliga-tags ul li:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 0;
+  border-left: 13px solid white;
+  border-top: 13px solid transparent;
+  border-bottom: 13px solid transparent;
+}
+.page-node-type-layout-page.node-bundesliga .view-bundesliga-news.view-display-id-block_2 .views-row {
+  margin-bottom: 2em;
 }
 
 /*------------------------------------------- */
@@ -4380,6 +4428,16 @@ nav#block-hsk-footer ul li a {
     max-height: 70px;
     width: auto;
   }
+  .page-node-type-layout-page.node-bundesliga .block-block-content.sponsoren-logos {
+    padding: 2em 0;
+    margin-bottom: 0;
+  }
+  .page-node-type-layout-page.node-bundesliga .block-block-content.sponsoren-logos .field--name-body h2 {
+    padding-bottom: 0.5em;
+  }
+  .page-node-type-layout-page.node-bundesliga .block-block-content.sponsoren-logos .field__item {
+    margin-bottom: 0;
+  }
   .page-node-type-layout-page.node-bundesliga .top-news.block-views-blockbundesliga-news-block-1 .view-content {
     margin-right: -15px;
     margin-left: -15px;
@@ -4403,6 +4461,18 @@ nav#block-hsk-footer ul li a {
   .page-node-type-layout-page.node-bundesliga .top-news.block-views-blockbundesliga-news-block-1 .view-content .views-row {
     float: left;
     width: 33.3333333333%;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .page-node-type-layout-page.node-bundesliga .view-bundesliga-news.view-display-id-block_2 .views-row .image-body {
+    display: flex;
+  }
+  .page-node-type-layout-page.node-bundesliga .view-bundesliga-news.view-display-id-block_2 .views-row .image-body .image {
+    width: 300px;
+    margin-right: 1.5em;
+  }
+  .page-node-type-layout-page.node-bundesliga .view-bundesliga-news.view-display-id-block_2 .views-row .image-body .image img {
+    max-width: none;
   }
 }
 
