--- a/web/themes/hsk_zymphonies/sass/_landing-page.sass
+++ b/web/themes/hsk_zymphonies/sass/_landing-page.sass
@@ -1,16 +1,28 @@
 .page-node-type-layout-page
+  .sidebar
+    margin-top: 0
   #block-tabs
     +hsk-container
   form.node-layout-page-layout-builder-form, .messages
     +hsk-container
   &.node-bundesliga
+    .content_layout
+      .region-content
+        margin-bottom: 0
+        #block-hsk-zymphonies-content
+          margin-bottom: 0
     .hsk-onecol
       &.sponsoren-logos-container
         background: #eee
         margin-bottom: 3em
+      &.further-news
+        background: #eee
+        padding-top: 4em
+        padding-bottom: 3em
     .block-block-content
       &.sponsoren-logos
-        padding: 0.5em 0
+        padding: 2em 0
+        margin-bottom: 0
         .field__item
           margin-bottom: 1.5em
         .image
@@ -20,6 +32,9 @@
             width: auto
     .top-news
       &.block-views-blockbundesliga-news-block-1
+        >h2
+          font-size: 2rem
+          margin-bottom: 1em
         .view-content
           .views-row
             margin-bottom: 2em
@@ -28,6 +43,35 @@
             .views-field-title
               h2
                 font-size: 1.35rem
+        .views-field-bundesliga-tags
+          ul
+            margin: 0
+            padding: 0
+            li
+              display: inline-block
+              background: #eee
+              color: #999
+              height: 26px
+              line-height: 18px
+              padding: 0.2em 0.7em 0.2em 2em
+              position: relative
+              margin-left: 0
+              margin-right: 1em
+              &:after
+                content: ""
+                position: absolute
+                left: 0
+                bottom: 0
+                width: 0
+                height: 0
+                border-left: 13px solid white
+                border-top: 13px solid transparent
+                border-bottom: 13px solid transparent
+    .view-bundesliga-news
+      &.view-display-id-block_2
+        .views-row
+          margin-bottom: 2em
+
 
 
 /*------------------------------------------- */
@@ -59,6 +103,15 @@
 
   .page-node-type-layout-page
     &.node-bundesliga
+      .block-block-content
+        &.sponsoren-logos
+          padding: 2em 0
+          margin-bottom: 0
+          .field--name-body
+            h2
+              padding-bottom: 0.5em
+          .field__item
+            margin-bottom: 0
       .top-news
         &.block-views-blockbundesliga-news-block-1
           .view-content
@@ -66,3 +119,13 @@
             .views-row
               +make-md-column(4)
               padding-right: 2em
+      .view-bundesliga-news
+        &.view-display-id-block_2
+          .views-row
+            .image-body
+              display: flex
+              .image
+                width: 300px
+                margin-right: 1.5em
+                img
+                  max-width: none
