Templates für Layouts hsk-two-one und hsk-three-one, default Layout für Node angepasst.

--- a/web/modules/custom/hsk_layouts/templates/hsk-three-one.html.twig
+++ b/web/modules/custom/hsk_layouts/templates/hsk-three-one.html.twig
@@ -1,17 +1,27 @@
+{%
+  set classes = [
+  'layout',
+  'hsk-three-one'
+]
+%}
 {% if content %}
-  <div{{ attributes }}>
+  <div{{ attributes.addClass(classes) }}>
+    <div class="container">
+      <div class="row">
 
     {% if content.first %}
-      <div {{ region_attributes.first.addClass('layout__region', 'layout__region--first') }}>
+      <div {{ region_attributes.first.addClass('layout__region', 'layout__region--first', 'col-md-9') }}>
         {{ content.first }}
       </div>
     {% endif %}
 
     {% if content.second %}
-      <div {{ region_attributes.second.addClass('layout__region', 'layout__region--second') }}>
+      <div {{ region_attributes.second.addClass('layout__region', 'layout__region--second', 'col-md-3') }}>
         {{ content.second }}
       </div>
     {% endif %}
+      </div>
+    </div>
 
   </div>
 {% endif %}
