--- a/web/themes/hsk_zymphonies/sass/includes/_colors.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_colors.sass
@@ -12,6 +12,7 @@ $orange-flaeche: $ci-flaeche
 
 $light-grey-text: #888
 $grey-text: #666
+$light-grey-text: #999
 $black: black
 $blue: #6A7BA8
 $blue: #6e7b99
