--- a/web/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
+++ b/web/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
@@ -111,4 +111,34 @@ $divider-line: 1px solid #e5e5e5
   &:hover
     background: darken($primary-color, 10%)
 
+@mixin tag-flag
+  display: inline-block
+  background: #eee
+  color: #888
+  height: 20px
+  font-size: 0.75rem
+  line-height: 13px
+  padding: 0.3em 0.9em 0.3em 2em
+  position: relative
+  margin-left: 0
+  margin-right: 1em
+  &:after
+    content: ""
+    position: absolute
+    left: 0
+    bottom: 0
+    width: 0
+    height: 0
+    border-left: 10px solid white
+    border-top: 10px solid transparent
+    border-bottom: 10px solid transparent
+
+@mixin tag-flag-darker
+  +tag-flag
+  background: #d5d5d5
+  color: white
+  line-height: 12px
+  &:after
+    border-left: 10px solid #eee
+
 
