--- a/web/themes/hsk_zymphonies/templates/block/block--bundle--page_section_paragraphs.html.twig
+++ b/web/themes/hsk_zymphonies/templates/block/block--bundle--page_section_paragraphs.html.twig
@@ -8,8 +8,8 @@
 %}
 <div{{ attributes.addClass(classes) }}>
   {{ title_prefix }}
-  <div class="block-content container">
-    <div class="block-inner row">
+  <div class="block-content">
+    <div class="block-inner">
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
   {% endif %}
